<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bajoquetaapp.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.bajoquetaapp.ui.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.bajoquetaapp.ui.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />
</navigation>