<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:contentDescription="@string/logo_smartcook"
        app:srcCompat="@mipmap/logo_smartcook_foreground" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6">

            <Button
                android:id="@+id/registerButton"
                style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="12dp"
                android:text="@string/inicia_sesi_n_con_correo_electronico" />

            <Button
                android:id="@+id/googleButton"
                style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="25dp"
                android:text="@string/inicia_sesi_n_con_google" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>